# mvision

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/denniss/mvision/: AutoFitTextureView.java  DrawerFragment.java  ItemDetailActivity.java  ItemDetailFragment.java  ItemListActivity.java  ItemListFragment.java  MainActivity.java  RecordingFragment.java  TrackingFragment.java
android/app/src/main/java/me/denniss/mvision/vio/: VisualInertialOdometry.java
android/app/src/main/jni/: Android.mk  Application.mk  decoding_encoding.c  inertial.cpp  inertial.h  init.cpp  old_jni.cpp  recorder_old.cpp  recorder_old.h  recording.cpp  video_encode.cpp  video_encode.h  vio.cpp  vio.h
android/app/src/main/res/layout/: activity_item_detail.xml  activity_item_list.xml  activity_main.xml  fragment_drawer.xml  fragment_item_detail.xml  fragment_recording.xml  fragment_tracking.xml
android/app/src/main/res/layout-sw600dp/: activity_item_list.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
include/: msckf.h
scripts/: imu_calibrate.py  vis_axes.py  vis_position.py
src/: MadgwickAHRS.cpp  MadgwickAHRS.h  ekf.h  fileio.cpp  fileio.h  main.cpp  msckf.cpp  msckf_imgproc.cpp  projection.cpp  projection.h  stat.cpp  stat.h  testing.cpp  testing.h  utils.cpp  utils.h
